Regenerant artifact #152
